tests/ui/associated-traits/impl-nontrait-rhs.stderr
error[E0404]: expected trait, found type
  --> $DIR/impl-nontrait-rhs.rs:9:17
   |
LL |     trait Arg = std::rc::Rc<u32>;
   |                 ^^^^^^^^^^^^^^^^ not a trait

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0404`.
